# vacuum-robot-controller

./: .gitignore  CMakeLists.txt  README.md
config/: settings.ini
resources/: settings.qrc
src/: AbstractVideo.cpp  AbstractVideo.h  CameraVideo.cpp  CameraVideo.h  MainWindow.cpp  MainWindow.h  MediaVideo.cpp  MediaVideo.h  Settings.cpp  Settings.h  VideoPlayer.cpp  VideoPlayer.h  VideoToolbar.cpp  VideoToolbar.h  WorkspaceView.cpp  WorkspaceView.h  main.cpp
